--- a/hackmit/public/stylesheets/style.css
+++ b/hackmit/public/stylesheets/style.css
@@ -1,8 +1,15 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 'Raleway';
 }
 
 a {
   color: #00B7FF;
+}
+
+.search-div {
+	margin-top: 150px;
+}
+.title {
+	margin: 20px
 }
