--- a/hackmit/views/layout.jade
+++ b/hackmit/views/layout.jade
@@ -2,6 +2,23 @@ doctype html
 html
   head
     title= title
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    
+    // jQuery UI
+    script(type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js')
+    script(type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js')
+
+    // Bootstrap
+    link(rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
+
+    // Google Fonts
+    link(href='http://fonts.googleapis.com/css?family=Raleway:400,400italic' rel='stylesheet' type='text/css')
+
+    // Local Files
     link(rel='stylesheet', href='/stylesheets/style.css')
+
   body
     block content
