--- a/hackmit/views/layout.jade
+++ b/hackmit/views/layout.jade
@@ -16,6 +16,7 @@ html
 
     // Google Fonts
     link(href='http://fonts.googleapis.com/css?family=Raleway:400,400italic' rel='stylesheet' type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
 
     // Local Files
     link(rel='stylesheet', href='/stylesheets/style.css')
