--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   padding: 0px;
-  font: 'Raleway';
+  font-family: 'Open Sans';
   background-color: #222222;
 }
 
@@ -31,11 +31,11 @@ a {
 	font-family:Open Sans;
 	margin: 20px;
 	color:white;
-	font-size: 40px;
-	letter-spacing: 2px;
+	font-size: 60px;
+	letter-spacing: 4px;
 }
 
-#title {
+#title-wrapper {
 	background-image: url('../images/lelz.jpg');
 	background-repeat: no-repeat;
     background-size: cover;
@@ -43,4 +43,26 @@ a {
     background-position: center center;
     height: 70%;
     width:100%;
+}
+#icon-wrapper {
+	color:white;
+	
+}
+.icon-table {
+	position:absolute;
+	top:70%;
+	height:30%;
+	width:100%;
+	margin:auto;
+	text-align:center;
+}
+.title-icons td {
+	font-size: 100px;
+	width: 30%;
+	height:20%;
+	padding-top:40px;
+}
+.title-text td{
+	vertical-align: top;
+	padding-top:20px;
 }
