--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,9 @@ html
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
 
+    //font-awesome
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
+
     // Google Fonts
     link(href='http://fonts.googleapis.com/css?family=Raleway:400,400italic' rel='stylesheet' type='text/css')
     link(href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
