--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   padding: 0px;
   font-family: 'Open Sans';
   background-color: #222222;
+  color:white;
 }
 
 a {
@@ -65,4 +66,29 @@ a {
 .title-text td{
 	vertical-align: top;
 	padding-top:20px;
+}
+
+.results-wrapper {
+	position:absolute;
+	top: 20%;
+	left: 20%;
+	width:60%;
+	background-color:orange;
+}
+.results-table {
+	background-color:blue;
+}
+.result{
+	padding:10px;
+	font-size:20px;
+}
+.result:hover {
+	background-color:white;
+}
+.song-details {
+	display:inline-block;
+}
+.song-image {
+	max-width:100%;
+	max-height:100%;
 }
