--- a/views/index.jade
+++ b/views/index.jade
@@ -5,13 +5,17 @@ block content
   div(id="title-wrapper")
     div(class="search-div")
       h3(class="title text-center")= title
-
+      br
       div(class="input-group")
 
-        input(type="file" class="form-control" id="uploadBox" placeholder="Upload Music File...")
         span(class="input-group-btn")
           button(class="btn btn-default" type="button" id="uploadBtn")
-            span(class="glyphicon glyphicon-cloud-upload hover-off" aria-hidden="true")
+            i(class="fa fa-upload")
+        input(class="form-control" id="uploadBox" placeholder="Click the button on the left to upload an image!" disabled)
+        span(class="input-group-btn")
+          button(class="btn btn-default" type="button" id="searchBtn" disabled)
+            i(class="fa fa-search")
+        
 
 
   div(id="icon-wrapper")
