--- a/views/test.jade
+++ b/views/test.jade
@@ -1,4 +1,4 @@
 extends layout
 
 block content
-	script(type='text/javascript' src='/scripts/test.js')
+	script(type='text/javascript' src='/javascripts/test.js')
