--- a/views/results.jade
+++ b/views/results.jade
@@ -6,11 +6,13 @@ block content
       h1 Here's your playlist:
     div(class='row')
       div(class='results-table col-md-6')
-        each val in cResults
+        each val in sResults
           div(class='row result')
-            =val
+            =val.title
       div(class='song-details col-md-6')
         img(src='/images/eternity.jpeg' class='song-image')
+        span Title:
+        span =
 
 
 
