some results css

--- a/views/results.jade
+++ b/views/results.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  script(type='text/javascript' src='/javascripts/results.js')
   div(class='results-wrapper container-fluid')
     div(class='col-md-12')
       h1 Here's your playlist:
