--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,18 +103,15 @@ a {
 	top: 20%;
 	left: 20%;
 	width:60%;
-	background-color:orange;
 }
 .results-table {
-	background-color:blue;
 }
 .result{
 	padding:10px;
 	font-size:20px;
+	border:0px white solid;
 }
-.result:hover {
-	background-color:white;
-}
+
 .song-details {
 	display:inline-block;
 }
