--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,12 +6,14 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     
     // jQuery UI
+    link(rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
     script(type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js')
-    script(type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js')
+    script(type='text/javascript' src='http://code.jquery.com/ui/1.11.4/jquery-ui.js')
 
     // Bootstrap
     link(rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    link(rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
     script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
 
     //font-awesome
