--- a/views/results.jade
+++ b/views/results.jade
@@ -12,8 +12,7 @@ block content
             =val
       div(class='song-details col-md-6')
         img(src='/images/eternity.jpeg' class='song-image')
-        span Title:
-        span =
+        span
 
 
 
