--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,3 +119,12 @@ a {
 	max-width:100%;
 	max-height:100%;
 }
+.backbutton {
+	color:white;
+	padding:5px;
+	text-decoration: none;
+}
+.backbutton:hover {
+	color:#cccccc;
+	text-decoration: none;
+}
