--- a/views/results.jade
+++ b/views/results.jade
@@ -10,7 +10,7 @@ block content
     div(class='col-md-12 result-title')
       h1 Here's your playlist:
     div(class='row')
-      div(class='results-table col-md-6')
+      div(class='col-md-6' id='results-table')
         span(class='invis' style='display:none')
         each val, index in sResults
           div(class='row result')
