--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,9 @@ html
     link(rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
     script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
 
+    // Angular
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js')
+
     //font-awesome
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
 
