--- a/views/index.jade
+++ b/views/index.jade
@@ -32,11 +32,11 @@ block content
           i(class="fa fa-headphones")
       tr(class='title-text')
         td
-          omg find a kool pic
+          |Find a picture that describes how you're feeling, or just anything you find interesting.
         td
-          omg then upload da pic 2 dis kool website
+          |Upload the image to our servers, and we'll do all the necessary analysis.
         td
-          omg now u get 2 listen 2 muzicz oOooOOooOOO~~
+          |Get a playlist of music selections that correspond with your image selection!
 
 //
   script(type='text/javascript' src='/javascripts/index.js')
