--- a/views/results.jade
+++ b/views/results.jade
@@ -8,7 +8,7 @@ block content
       &nbsp;back to search
   div(class='results-wrapper container-fluid')
     div(class='col-md-12 result-title')
-      h1 Here's your playlist:
+      h1 Here's your playlist!
     div(class='row')
       div(class='col-md-6' id='results-table')
         span(class='invis' style='display:none')
