--- a/views/results.jade
+++ b/views/results.jade
@@ -12,32 +12,10 @@ block content
     div(class='row')
       div(class='col-md-6' id='results-table')
         span(class='invis' style='display:none')
-        each val, index in sResults
-          div(class='row result')
-            div(class='col-md-1')
-              =index + 1
-              | .
-            div(class='col-md-5')
-              =val[0]
-              | &nbsp;-&nbsp;
-              =val[1]
+        div(id="pop")
       div(class='song-details col-md-6')
-        each val, index in sResults
-          div(class='resultsList')
-            img(src='/images/eternity.jpeg' class='song-image')
-            br
-            b
-              | Title:&nbsp;
-            =val[0]
-            br
-            b
-              | Artist:&nbsp;
-            =val[1]
-            br
-            div
-              a(style='color:#e52d27;font-size:20pt' href='https://www.youtube.com/results?search_query=' + val[0] + ' ' + val[1])
-                i(class="fa fa-youtube-play")
 
 
 
   div(id="icon-wrapper")
+    p#tags(style="display:none;")= cResults
