--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,15 +6,15 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     
     // jQuery UI
-    link(rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
-    script(type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js')
-    script(type='text/javascript' src='http://code.jquery.com/ui/1.11.4/jquery-ui.js')
+    link(rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
+    script(type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js')
+    script(type='text/javascript' src='https://code.jquery.com/ui/1.11.4/jquery-ui.js')
 
     // Bootstrap
-    link(rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-    link(rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
-    script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
+    link(rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
 
     // Angular
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js')
@@ -23,7 +23,7 @@ html
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
 
     // Google Fonts
-    link(href='http://fonts.googleapis.com/css?family=Raleway:400,400italic' rel='stylesheet' type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Raleway:400,400italic' rel='stylesheet' type='text/css')
     link(href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
 
     // Local Files
